syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

message Interval {
  google.protobuf.Timestamp start = 1;
  google.protobuf.Timestamp end = 2;
}

message Event {
  uint32 id = 1;
  // the name is an index for the lookup table of event names
  uint32 name = 2;
  string location = 3;
  string description = 4;
  // each element is an index for the lookup table of tag names
  repeated uint32 tags = 5;
  Interval interval = 6;
  google.protobuf.Duration duration = 7;
  oneof trigger {
    google.protobuf.Duration relative = 8;
    google.protobuf.Timestamp absolute = 9;
    bool none = 10;
  }
}

// Calendar
message CalendarRequest {}
message CalendarResponse {
  message Source {
    string calendar_server = 1;
    repeated string names = 2;
  }
  repeated Source sources = 1;
}

// Events
message EventsRequest {
  Interval interval = 1;
  string timezone = 2;
}
message EventsResponse {
  repeated string event_names = 1;
  repeated string tags = 2;
  repeated Event events = 3;
}

service CalendarService {
  rpc Calendar(CalendarRequest) returns (CalendarResponse);
  rpc Events(EventsRequest) returns (EventsResponse);
}

